ph.d. degrees correction

--- a/_data/phds.yaml
+++ b/_data/phds.yaml
@@ -559,7 +559,7 @@
   advisor: A. Chakrabarti
 
 - name: S. Usha
-  year:
+  year: 1997
   title: Peristaltic transport of biofluids
   advisor: A. Ramachandra Rao
 
@@ -779,7 +779,7 @@
   advisor: G. V. Ravindra, M. K. Ghosh
 
 - name: Dheeraj D. Kulkarni
-  year:
+  year: 2012
   title: Relative symplectic caps, 4 genus and fibered knots
   advisor: S. Gadgil
 
