updated publications, seminar tweaks

--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -101,6 +101,21 @@
   volume: "261"
   issn: "0025-5874"
 
+- number: "305"
+  author: "Chowdhury, Sudipto and Gudi, Thirupathi and Nandakumaran, A. K."
+  fjournal: "Mathematics of Computation"
+  url: "httpdx.doi.org10.1090mcom3125"
+  journal: "Math. Comp."
+  mrnumber: "3614013"
+  pages: "1103--1126"
+  year: 2017
+  mrreviewer: "Ernest Scheiber"
+  title: "Error bounds for a Dirichlet boundary control problem based on energy spaces"
+  doi: "10.1090mcom3125"
+  mrclass: "49M25 (65K10 65N12 65N15 65N30)"
+  volume: "86"
+  issn: "0025-5718"
+
 - number: "2"
   author: "Prasad, Phoolan"
   fjournal: "Indian Academy of Sciences. Proceedings. Mathematical Sciences"
@@ -157,6 +172,20 @@
   mrclass: "46L87 (46L08)"
   volume: "662"
   issn: "0075-4102"
+
+- number: "2"
+  author: "Ayyer, Arvind and Linusson, Svante"
+  fjournal: "Transactions of the American Mathematical Society"
+  url: "httpdx.doi.org10.1090tran6806"
+  journal: "Trans. Amer. Math. Soc."
+  mrnumber: "3572266"
+  pages: "1097--1125"
+  year: 2017
+  title: "Correlations in the multispecies TASEP and a conjecture by Lam"
+  doi: "10.1090tran6806"
+  mrclass: "60K35 (05A05 05A17 20F55)"
+  volume: "369"
+  issn: "0002-9947"
 
 - number: "6"
   author: "Seshadri, Harish and Verma, Kaushal"
@@ -608,6 +637,20 @@
   mrclass: "58D29 (14D20 58F05)"
   volume: "89"
   issn: "0012-7094"
+
+- number: "1"
+  author: "Iyer, Srikanth and Vaze, Rahul"
+  fjournal: "The Annals of Applied Probability"
+  url: "httpdx.doi.org10.121416-AAP1196"
+  journal: "Ann. Appl. Probab."
+  mrnumber: "3619781"
+  pages: "48--64"
+  year: 2017
+  title: "Achieving nonzero information velocity in wireless networks"
+  doi: "10.121416-AAP1196"
+  mrclass: "60D05 (05C82 60F15 60G55 60K30)"
+  volume: "27"
+  issn: "1050-5164"
 
 - number: "11"
   author: "Hyv\\onen, N. and Nandakumaran, A. K. and Varma, H. M. and Vasu, R. M."
@@ -1111,6 +1154,20 @@
   mrclass: "35B27 (35K20)"
   volume: "112"
   issn: "0253-4142"
+
+- number: "1"
+  author: "Bhattacharyya, T. and Narayanan, E. K. and Sarkar, Jaydeb"
+  fjournal: "Operators and Matrices"
+  url: "httpdx.doi.org10.7153oam-11-07"
+  journal: "Oper. Matrices"
+  mrnumber: "3602632"
+  pages: "101--113"
+  year: 2017
+  title: "Analytic model of doubly commuting contractions"
+  doi: "10.7153oam-11-07"
+  mrclass: "30H10 (46E22 46M05 47A20 47A45 47B32 47B38)"
+  volume: "11"
+  issn: "1846-3886"
 
 - number: "4"
   author: "Janaki, T. M. and Rangarajan, Govindan"
@@ -1620,6 +1677,20 @@
   volume: "17"
   issn: "0971-3514"
 
+- number: "1"
+  author: "Boggarapu, Pradeep and Thangavelu, S."
+  fjournal: "Israel Journal of Mathematics"
+  url: "httpdx.doi.org10.1007s11856-017-1438-6"
+  journal: "Israel J. Math."
+  mrnumber: "3625104"
+  pages: "57--92"
+  year: 2017
+  title: "On the chaotic behavior of the Dunkl heat semigroup on weighted $L^p$ spaces"
+  doi: "10.1007s11856-017-1438-6"
+  mrclass: "47D06 (37D45)"
+  volume: "217"
+  issn: "0021-2172"
+
 - number: "1-2"
   author: "George, Raju K."
   fjournal: "Numerical Functional Analysis and Optimization. An International Journal"
@@ -1862,6 +1933,34 @@
   volume: "247"
   issn: "0377-0427"
 
+- number: "3"
+  author: "Cui, Jintao and Gudi, Thirupathi"
+  fjournal: "Advances in Computational Mathematics"
+  url: "httpdx.doi.org10.1007s10444-016-9495-7"
+  journal: "Adv. Comput. Math."
+  mrnumber: "3650438"
+  pages: "517--535"
+  year: 2017
+  title: "Finite element approximation of a free boundary plasma problem"
+  doi: "10.1007s10444-016-9495-7"
+  mrclass: "65N30 (49S05 65K10 65K15 65N15 82D10)"
+  volume: "43"
+  issn: "1019-7168"
+
+- number: "6"
+  author: "Banerjee, Abhishek"
+  fjournal: "Archiv der Mathematik"
+  url: "httpdx.doi.org10.1007s00013-017-1025-4"
+  journal: "Arch. Math. (Basel)"
+  mrnumber: "3646949"
+  pages: "581--591"
+  year: 2017
+  title: "On some spectral spaces associated to tensor triangulated categories"
+  doi: "10.1007s00013-017-1025-4"
+  mrclass: "18E30 (06E15 13C60)"
+  volume: "108"
+  issn: "0003-889X"
+
 - author: "Gurjar, R. V. and Pradeep, C. R. and Zhang, D.-Q."
   fjournal: "Nagoya Mathematical Journal"
   url: "httpprojecteuclid.orgeuclid.nmj1114631779"
@@ -1903,6 +2002,20 @@
   mrclass: "32H40 (32Q45 32V10)"
   volume: "274"
   issn: "0025-5874"
+
+- number: "1"
+  author: "Adimurthi and Ratnakumar, P. K. and Sohani, Vijay Kumar"
+  fjournal: "Proceedings of the Royal Society of Edinburgh. Section A. Mathematics"
+  url: "httpdx.doi.org10.1017S0308210516000081"
+  journal: "Proc. Roy. Soc. Edinburgh Sect. A"
+  mrnumber: "3603524"
+  pages: "1--23"
+  year: 2017
+  title: "A Hardy-Sobolev inequality for the twisted Laplacian"
+  doi: "10.1017S0308210516000081"
+  mrclass: "35A23 (33C50 35A08 35J15)"
+  volume: "147"
+  issn: "0308-2105"
 
 - number: "4"
   author: "Bagchi, Bhaskar and Datta, Basudeb"
@@ -2083,6 +2196,19 @@
   mrclass: "57Q15 (05C15 57N10 57Q05)"
   volume: "126"
   issn: "0253-4142"
+
+- author: "Yadav, Avinash Chand and Manchanda, Kaustubh and Ramaswamy, Ramakrishna"
+  fjournal: "Physica A. Statistical Mechanics and its Applications"
+  url: "httpdx.doi.org10.1016j.physa.2017.04.029"
+  journal: "Phys. A"
+  mrnumber: "3651413"
+  pages: "118--126"
+  year: 2017
+  title: "Emergent organization in a model market"
+  doi: "10.1016j.physa.2017.04.029"
+  mrclass: "91B24"
+  volume: "482"
+  issn: "0378-4371"
 
 - number: "3"
   author: "Basu, Arnab and Ghosh, Mrinal K."
@@ -3840,6 +3966,19 @@
   volume: "43"
   issn: "0363-0129"
 
+- author: "Bhattacharjee, M. and Eschmeier, J. and Keshari, Dinesh K. and Sarkar, Jaydeb"
+  fjournal: "Linear Algebra and its Applications"
+  url: "httpdx.doi.org10.1016j.laa.2017.02.032"
+  journal: "Linear Algebra Appl."
+  mrnumber: "3624676"
+  pages: "263--280"
+  year: 2017
+  title: "Dilations, wandering subspaces, and inner functions"
+  doi: "10.1016j.laa.2017.02.032"
+  mrclass: "47A13 (46E22 47A15 47A20 47A45)"
+  volume: "523"
+  issn: "0024-3795"
+
 - number: "4"
   author: "Prasad, Phoolan and Ravindran, Renuka"
   fjournal: "Journal of Mathematical and Physical Sciences"
@@ -5147,6 +5286,20 @@
   volume: "78"
   issn: "0044-2267"
 
+- author: "Kundu, S. and Aggarwal, Manisha and Hazra, Somnath"
+  fjournal: "Topology and its Applications"
+  url: "httpdx.doi.org10.1016j.topol.2016.11.008"
+  journal: "Topology Appl."
+  mrnumber: "3584123"
+  pages: "59--73"
+  year: 2017
+  mrreviewer: "Zi Qiu Yun"
+  title: "Finitely chainable and totally bounded metric spaces equivalent characterizations"
+  doi: "10.1016j.topol.2016.11.008"
+  mrclass: "54-02 (26A15 26A16 54C30 54E40)"
+  volume: "216"
+  issn: "0166-8641"
+
 - number: "4"
   author: "Majumdar, Anita and Yau, Donald"
   fjournal: "Indian Academy of Sciences. Proceedings. Mathematical Sciences"
@@ -5188,6 +5341,20 @@
   mrclass: "37F05 (30F40 37F10)"
   volume: "61"
   issn: "1747-6933"
+
+- number: "2"
+  author: "Bhattacharyya, Tirthankar and Sau, Haripada"
+  fjournal: "Publications of the Research Institute for Mathematical Sciences"
+  url: "httpdx.doi.org10.4171PRIMS53-2-2"
+  journal: "Publ. Res. Inst. Math. Sci."
+  mrnumber: "3649340"
+  pages: "261--285"
+  year: 2017
+  title: "$\\Gamma$-unitaries, dilation and a natural example"
+  doi: "10.4171PRIMS53-2-2"
+  mrclass: "47A20 (32A70 46E22)"
+  volume: "53"
+  issn: "0034-5318"
 
 - number: "6"
   author: "Ghosh, Mrinal K. and Arapostathis, Aristotle and Marcus, Steven I."
@@ -5472,6 +5639,21 @@
   mrclass: "58C15 (34A10)"
   volume: "18"
   issn: "0025-5661"
+
+- number: "7"
+  author: "Ji, Kui and Jiang, Chunlan and Keshari, Dinesh Kumar and Misra, Gadadhar"
+  fjournal: "Journal of Functional Analysis"
+  url: "httpdx.doi.org10.1016j.jfa.2016.12.019"
+  journal: "J. Funct. Anal."
+  mrnumber: "3608656"
+  pages: "2899--2932"
+  year: 2017
+  mrreviewer: "Sanne ter Horst"
+  title: "Rigidity of the flag structure for a class of Cowen-Douglas operators"
+  doi: "10.1016j.jfa.2016.12.019"
+  mrclass: "47B32 (47B35)"
+  volume: "272"
+  issn: "0022-1236"
 
 - number: "3"
   author: "Thangavelu, S."
@@ -6162,6 +6344,20 @@
   mrclass: "80A22"
   volume: "25"
   issn: "0093-6413"
+
+- number: "8"
+  author: "Aiyappan, S. and Nandakumaran, A. K."
+  fjournal: "Mathematical Methods in the Applied Sciences"
+  url: "httpdx.doi.org10.1002mma.4231"
+  journal: "Math. Methods Appl. Sci."
+  mrnumber: "3651974"
+  pages: "3173--3189"
+  year: 2017
+  title: "Optimal control problem in a domain with branched structure and homogenization"
+  doi: "10.1002mma.4231"
+  mrclass: "49J45 (35B27 35K20)"
+  volume: "40"
+  issn: "0170-4214"
 
 - number: "15"
   author: "Ayyer, Arvind"
@@ -7479,6 +7675,20 @@
   volume: "43"
   issn: "0138-4821"
 
+- author: "Bagchi, Bhaskar and Datta, Basudeb and Spreer, Jonathan"
+  fjournal: "European Journal of Combinatorics"
+  url: "httpdx.doi.org10.1016j.ejc.2016.10.005"
+  journal: "European J. Combin."
+  mrnumber: "3588713"
+  pages: "133--137"
+  year: 2017
+  mrreviewer: "Biplab Basak"
+  title: "A characterization of tightly triangulated 3-manifolds"
+  doi: "10.1016j.ejc.2016.10.005"
+  mrclass: "57Q15 (55U10)"
+  volume: "61"
+  issn: "0195-6698"
+
 - author: "Chakrabarti, A."
   mrnumber: "1659793"
   pages: "437--448"
@@ -8187,6 +8397,19 @@
   mrclass: "65D15 (41A05)"
   volume: "70"
   issn: "0377-0427"
+
+- author: "Das, Soumya and Pal, Ritwik"
+  fjournal: "Journal of Number Theory"
+  url: "httpdx.doi.org10.1016j.jnt.2017.03.021"
+  journal: "J. Number Theory"
+  mrnumber: "3657159"
+  pages: "113--125"
+  year: 2017
+  title: "Jacobi forms and differential operators odd weights"
+  doi: "10.1016j.jnt.2017.03.021"
+  mrclass: "11F50 (11F11 11F25)"
+  volume: "179"
+  issn: "0022-314X"
 
 - number: "5-6"
   author: "Chakrabarti, A. and Martha, S. C."
@@ -10581,6 +10804,20 @@
   volume: "62"
   issn: "0008-4204"
 
+- number: "3"
+  author: "Banerjee, Abhishek"
+  fjournal: "Fundamenta Mathematicae"
+  url: "httpdx.doi.org10.4064fm218-8-2016"
+  journal: "Fund. Math."
+  mrnumber: "3626589"
+  pages: "281--296"
+  year: 2017
+  title: "Monoidal semifilters and arrays of prime ideals"
+  doi: "10.4064fm218-8-2016"
+  mrclass: "13A15"
+  volume: "237"
+  issn: "0016-2736"
+
 - number: "6"
   author: "Bhowmik, Bappaditya"
   fjournal: "Archiv der Mathematik"
@@ -10799,6 +11036,20 @@
   volume: "41"
   issn: "0020-7225"
 
+- number: "1"
+  author: "Ayyer, Arvind and Schilling, Anne and Thi\\ery, Nicolas M."
+  fjournal: "Experimental Mathematics"
+  url: "httpdx.doi.org10.108010586458.2015.1107868"
+  journal: "Exp. Math."
+  mrnumber: "3599002"
+  pages: "22--30"
+  year: 2017
+  title: "Spectral gap for random-to-random shuffling on linear extensions"
+  doi: "10.108010586458.2015.1107868"
+  mrclass: "60J10 (05C81 06A07)"
+  volume: "26"
+  issn: "1058-6458"
+
 - author: "Prasad, Phoolan"
   series: "Chapman \\ HallCRC Monographs and Surveys in Pure and Applied Mathematics"
   url: "httpdx.doi.org10.12019781420026146"
@@ -10870,6 +11121,20 @@
   mrclass: "83C99"
   volume: "105"
   issn: "0375-9601"
+
+- number: "5"
+  author: "Bennett, Nathan and Iyer, Srikanth K. and Jammalamadaka, S. Rao"
+  fjournal: "Communications in Statistics. Theory and Methods"
+  url: "httpdx.doi.org10.108003610926.2015.1041981"
+  journal: "Comm. Statist. Theory Methods"
+  mrnumber: "3576713"
+  pages: "2277--2289"
+  year: 2017
+  title: "Analysis of gamma and Weibull lifetime data under a general censoring scheme and in the presence of covariates"
+  doi: "10.108003610926.2015.1041981"
+  mrclass: "62N01 (62G05 62N02 62N05 62P20)"
+  volume: "46"
+  issn: "0361-0926"
 
 - number: "12"
   author: "Sengadir, T."
@@ -11174,6 +11439,20 @@
   volume: "62"
   issn: "1386-6184"
 
+- author: "Ayyer, Arvind and Prasad, Amritanshu and Spallone, Steven"
+  fjournal: "Journal of Combinatorial Theory. Series A"
+  url: "httpdx.doi.org10.1016j.jcta.2017.03.004"
+  journal: "J. Combin. Theory Ser. A"
+  mrnumber: "3645574"
+  pages: "208--232"
+  year: 2017
+  mrreviewer: "Allan Berele"
+  title: "Representations of symmetric groups with non-trivial determinant"
+  doi: "10.1016j.jcta.2017.03.004"
+  mrclass: "05E10 (20C30)"
+  volume: "150"
+  issn: "0097-3165"
+
 - number: "1-2"
   author: "Prasad, Phoolan"
   fjournal: "Differential Equations and Dynamical Systems. An International Journal for Theory, Applications, and Computer Simulations"
@@ -11285,6 +11564,20 @@
   mrclass: "01A70 (76P05 82C40)"
   volume: "75"
   issn: "0025-5742"
+
+- number: "4"
+  author: "Prasad, Phoolan"
+  fjournal: "Indian Journal of Pure and Applied Mathematics"
+  url: "httpdx.doi.org10.1007s13226-016-0197-0"
+  journal: "Indian J. Pure Appl. Math."
+  mrnumber: "3589750"
+  pages: "641--653"
+  year: 2016
+  title: "Kinematical conservation laws in a space of arbitrary dimensions"
+  doi: "10.1007s13226-016-0197-0"
+  mrclass: "35F20 (35A30 35F21 35L65 76L05)"
+  volume: "47"
+  issn: "0019-5588"
 
 - number: "1"
   author: "Borkar, Vivek S. and Karnik, Aditya and Nair, Jayakrishnan and Nalli, Sanketh"
@@ -11635,6 +11928,20 @@
   mrclass: "34A12 (26A33 34G10)"
   volume: "49"
   issn: "0895-7177"
+
+- number: "5"
+  author: "Biswas, Indranil and Seshadri, Harish"
+  fjournal: "Comptes Rendus Math\\ematique. Acad\\emie des Sciences. Paris"
+  url: "httpdx.doi.org10.1016j.crma.2017.03.012"
+  journal: "C. R. Math. Acad. Sci. Paris"
+  mrnumber: "3650386"
+  pages: "577--581"
+  year: 2017
+  title: "Quot schemes and Ricci semipositivity"
+  doi: "10.1016j.crma.2017.03.012"
+  mrclass: "53C56 (14H10 32Q20)"
+  volume: "355"
+  issn: "1631-073X"
 
 - number: "5"
   author: "Ramasesha, S."
@@ -12198,6 +12505,19 @@
   volume: "117"
   issn: "0253-4142"
 
+- author: "Chowdhury, Sudipto and Gudi, Thirupathi"
+  fjournal: "Journal of Computational and Applied Mathematics"
+  url: "httpdx.doi.org10.1016j.cam.2016.12.005"
+  journal: "J. Comput. Appl. Math."
+  mrnumber: "3606080"
+  pages: "290--306"
+  year: 2017
+  title: "A $C^0$ interior penalty method for the Dirichlet control problem governed by biharmonic operator"
+  doi: "10.1016j.cam.2016.12.005"
+  mrclass: "49M25 (65N15 65N30)"
+  volume: "317"
+  issn: "0377-0427"
+
 - number: "4"
   author: "Khandekar, D. C. and Lawande, S. V. and Bhagwat, K. V."
   fjournal: "Physics Letters. A"
@@ -12701,6 +13021,20 @@
   volume: "46"
   issn: "0044-2275"
 
+- author: "Bharali, Gautam and Zimmer, Andrew"
+  fjournal: "Advances in Mathematics"
+  url: "httpdx.doi.org10.1016j.aim.2017.02.005"
+  journal: "Adv. Math."
+  mrnumber: "3620691"
+  pages: "377--425"
+  year: 2017
+  mrreviewer: "Feng Rong"
+  title: "Goldilocks domains, a weak notion of visibility, and applications"
+  doi: "10.1016j.aim.2017.02.005"
+  mrclass: "32F45 (32H40 32H50 32T25 53C23)"
+  volume: "310"
+  issn: "0001-8708"
+
 - number: "3"
   author: "De Maio, Umberto and Nandakumaran, Akamabadath K. and Perugia, Carmen"
   fjournal: "Evolution Equations and Control Theory"
@@ -12868,6 +13202,35 @@
   mrclass: "54H11 (20G15)"
   volume: "84"
   issn: "0025-5742"
+
+- number: "7"
+  author: "Bharali, Gautam and Biswas, Indranil and Schumacher, Georg"
+  fjournal: "Complex Variables and Elliptic Equations. An International Journal"
+  url: "httpdx.doi.org10.108017476933.2016.1252342"
+  journal: "Complex Var. Elliptic Equ."
+  mrnumber: "3633161"
+  pages: "914--918"
+  year: 2017
+  mrreviewer: "Ji\\v r\\\\i  Lebl"
+  title: "A criterion for a degree-one holomorphic map to be a biholomorphism"
+  doi: "10.108017476933.2016.1252342"
+  mrclass: "32H02 (32J18)"
+  volume: "62"
+  issn: "1747-6933"
+
+- number: "1"
+  author: "Chan, Chun Lam and Fernandes, Winston and Kashyap, Navin and Krishnapur, Manjunath"
+  fjournal: "SIAM Journal on Discrete Mathematics"
+  url: "httpdx.doi.org10.113715M1028819"
+  journal: "SIAM J. Discrete Math."
+  mrnumber: "3629430"
+  pages: "597--631"
+  year: 2017
+  title: "Phase transitions for the uniform distribution in the pattern maximum likelihood problem and its Bethe approximation"
+  doi: "10.113715M1028819"
+  mrclass: "68Q87"
+  volume: "31"
+  issn: "0895-4801"
 
 - number: "2"
   author: "Varma, Hari M. and Banerjee, B. and Roy, D. and Nandakumaran, A. K. and Vasu, R. M."
