--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -399,40 +399,48 @@
 - name	:	Kartick Ghosh
   user-id	:	kartick16
   programme: Integrated PhD
+  year-of-joining: 2017
 
 
 
 - name	:	Pabitra Barman
   user-id	:	pabitra16
   programme: Integrated PhD
+  year-of-joining: 2017
 
 
 - name	:	Pranab Sarkar
   user-id	:	pranab16
   programme: Integrated PhD
+  year-of-joining: 2017
 
 
 - name	:	Pritam Ganguly
   user-id	:	pritam16
   programme: Integrated PhD
+  year-of-joining: 2017
 
 
 - name	:	Poornendu Kumar
   user-id	:	poornendusingh16
   programme: Integrated PhD
+  year-of-joining: 2017
 
 
 
 - name	:	Ragavendra Tripathi
   user-id	:	raghav16
   programme: Integrated PhD
+  year-of-joining: 2017
 
 
 - name	:	Shubham Rastogi
   user-id	:	shubhamrastogi16
   programme: Integrated PhD
+  year-of-joining: 2017
 
 
 - name	:	Swarnalipa Datta
   user-id	:	swarnalipa16
   programme: Integrated PhD
+  year-of-joining: 2017
