--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -79,7 +79,7 @@
   user-id: khare
   position: Assistant Professor
   phd: Chicago
-  reserach-areas: Positivity and analysis; Representation theory of Lie algebras; Combinatorics and discrete mathematics (with connections to the two research areas above)
+  research-areas: Positivity and analysis; Representation theory of Lie algebras; Combinatorics and discrete mathematics (with connections to the two research areas above)
   phone-ext: 3214
 
 - name: Manjunath Krishnapur
