update email, ph.d. format

--- a/_data/emiscient.yaml
+++ b/_data/emiscient.yaml
@@ -1,13 +1,13 @@
 - name: Ushadevi Narendra Bhosle
   position: Raja Ramanna Fellow
   research-areas: Algebraic Geometry, vector bundles, principal bundles
-  email: bhosle@math.iisc.ernet.in
+  email: bhosle@iisc.ac.in
   photo: "fac-unb.jpg"
 
 - name: Aloknath Chakrabarti
   position: NASI Honourary Scientist
   research-areas: Boundary Value Problems, Integral Equations, Diffraction Theory, Numerical Methods
-  email: alok@math.iisc.ernet.in
+  email: alok@iisc.ac.in
   webpage: http://math.iisc.ernet.in/~alok/
   photo: fac-alok2.jpg
 
