--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -86,7 +86,7 @@
   user-id: manju
   position: Associate Professor
   research-areas: Probability Theory (random matrix theory, zeros of random analytic functions)
-  phd: Berkeley
+  phd: UC, Berkeley
   phone-ext: 3207
 
 - name: Gadadhar Misra
@@ -135,7 +135,7 @@
   user-id: harish
   position: Professor
   research-areas: Differential Geometry
-  phd: Strony Brook
+  phd: Stony Brook
   phone-ext: 2709
 
 - name: Pooja Singla
@@ -156,7 +156,7 @@
   user-id: rvenkat
   position: Assistant Professor
   research-areas: Representation Theory of Infinite Dimensional Lie algebras
-  phd: IMSc, Chennai
+  phd: IMSc
   phone-ext: 3616
 
 - name:  Kaushal Verma
