--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -122,7 +122,7 @@
   position: Assistant Professor
   research-areas: Differential geometry, several complex variables, and mathematical physics
   phd: Stony Brook
-  phone-ext:
+  phone-ext: 2754
 
 - name: Govindan Rangarajan
   user-id: rangarajan
