--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -125,7 +125,7 @@
   phone-ext: 2754
 
 - name: Govindan Rangarajan
-  user-id: rangarajan
+  user-id: rangaraj
   position: Professor
   research-areas: Nonlinear Dynamics and Time Series Analysis
   phd: Maryland
