--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -11,6 +11,7 @@
   research-areas: Algebraic geometry, Noncommutative geometry
   phd: Johns Hopkins
   phone-ext: 3326
+  website: https://sites.google.com/site/abhishekb1313/
 
 - name: Gautam Bharali
   user-id: bharali
@@ -32,6 +33,7 @@
   research-areas: Number Theory
   phd: HRI
   phone-ext: 3205
+  website: https://sites.google.com/site/somuhomepage/
 
 - name: Basudeb Datta
   user-id: dattab
