Corrected spellings of names

--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -2,7 +2,7 @@ aug2017:
   core1:
     - code: MA 200
       name: Multivariable Calculus
-      instructor: Tirupathi Gudi
+      instructor: Thirupathi Gudi
     
     - code: MA 212
       name: Algebra I
