bibitems can be entered in yaml correction to catalogue

--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -13331,3 +13331,10 @@
   doi: "10.100711786986_23"
   mrclass: "05C38 (68R10 68W20)"
   volume: "4051"
+
+- author: "Aardvark, H."
+  title: "Delicious ants"
+  journal: "Bulletin of the Mathematics Department"
+  year: 2017
+  volume: 1
+  pages: 1 -- $\infty$
