partial data for students, postdocs, staff

--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -8,7 +8,7 @@
   position: Inspire Fellow
   research-areas: Operator Theory
   user-id: surjitk15
-  webpage: http://math.iisc.ac.in/~surjitk15
+  # webpage: http://math.iisc.ac.in/~surjitk15
 
 
 - name: Sushma Palimar, Ph. D. (NITK, Surathkal)
