--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -1,31 +1,29 @@
-- name	:	Asha Kisan Dond(IITB)
+- name	:	Asha Kisan Dond, Ph.D.(IITB)
   user-id	:	asha16
 
+- name: Qaiser Jahan
+  user-id: qaiser17
 
-- name	:	Dipendu, Maity Ph. D. (IITP)
+- name : Abhash Kumar Jha, Ph.D.
+  user-id : abhash17
+
+
+- name	:	Dipendu, Maity, Ph. D. (IITP)
   user-id	:	dipendumaity16
-
-
-
-
-
 
 
 - name	:	K.Kalaivani
   user-id	:	kalai15
 
 
-
-
-
-
-
 - name	:	Kaustubh Manchanda, Ph. D. (JNU)
   user-id	:	kaustubh
 
+- name : Chandan Pal
+  user-id : chandan14
 
-- name	:	A. Sathish Kumar, Ph. D.
-  user-id	:	sathish16
+- name : Debamalya Sain
+  user-id: dsain17
 
 - name	:	Tanmay Sarkar, Ph. D. (IIT Madras)
   user-id	:	tanmay17
