--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -373,3 +373,61 @@
   user-id	:	swarnalipa16
   year-of-joining: 2016
   programme: Integrated PhD
+
+- name: Ramesh Mete
+  year-of-joining: 2017
+  programme: Integrated PhD
+  user-id: ???
+
+- name: Purba Banerjee
+  year-of-joining: 2017
+  programme: Integrated PhD
+  user-id: ???
+
+- name: Abhay Jindal
+  year-of-joining: 2017
+  programme: Integrated PhD
+  user-id: ???
+
+- name: Babhrubahan Bose
+  year-of-joining: 2017
+  programme: Integrated PhD
+  user-id: ???
+
+- name : Aakanksha Jain
+  user-id: aakankshaj
+  year-of-joining: 2017
+  programme: Integrated PhD
+  user-id: ???
+
+- name: Arindam Mandal
+  year-of-joining: 2017
+  programme: Integrated PhD
+  user-id: ???
+
+- name: Neeladri Maitra
+  user-id: neeladrim
+  year-of-joining: 2017
+  programme: Integrated PhD
+
+- name: Aparajita Karmakar
+  user-id: ???
+  year-of-joining: 2017
+  programme: PhD
+
+- name: Lakshmi Kanta Mahata
+  user-id: ???
+  year-of-joining: 2017
+  programme: PhD
+
+
+- name: Gobinda Sau
+  user-id: ???
+  year-of-joining: 2017
+  programme: PhD
+
+
+- name: Kesav S. Krishnan
+  user-id: ???
+  year-of-joining: 2017
+  programme: PhD
