uniformized capitalization across page

--- a/_data/emiscient.yaml
+++ b/_data/emiscient.yaml
@@ -12,7 +12,7 @@
   photo: fac-alok2.jpg
 
 - name: Phoolan Prasad
-  position: NASI Senior Scientist Platinum Jubilee Fellow
+  position: NASI Senior Scientist&ndash;Platinum Jubilee Fellow
   research-areas: Hyperbolic conservation laws, nonlinear waves and shock waves, sonic boom, numerical analysis
   webpage: http://math.iisc.ernet.in/~prasad/
   photo: fac-phoolanprasad.jpg
